update version to v2.5.2

--- a/src/main/resources/i18n/messages_en_US.properties
+++ b/src/main/resources/i18n/messages_en_US.properties
@@ -31,6 +31,8 @@ API.MARKET_SERVER_ERROR = Market Server Error
 API.DATA_SELECTED_INCLUDE_SHARED_OR_UNABLE_SHARE_DATA = data selected include shared or unable share data
 API.DOWNLOAD_SUCCESS = Download Success
 API.DOWNLOAD_FAIL = Download Fail
+API.TIPS.UNREACHABLE = ❌ Unreachable ❌, Are you sure to save❓⚠️
+API.TIPS.REACHABLE = ✅ Reachable ✅, Click confirm to save ✔️😊
 
 # page
 # /page/login
@@ -228,3 +230,5 @@ PAGE.SHOW = TV Show
 PAGE.OTHER = Other
 
 PAGE.WARN.EDIT_MARKET_RULE = rule from market will be updated after author edit, are you sure ?
+
+PAGE.TIPS.EDIT_PROXY_PATH_WARNING = ⚠ Please don't edit proxy path, unless you know what you want
