--- a/src/main/resources/i18n/messages_zh_CN.properties
+++ b/src/main/resources/i18n/messages_zh_CN.properties
@@ -31,6 +31,8 @@ API.MARKET_SERVER_ERROR = 规则市场服务器错误
 API.DATA_SELECTED_INCLUDE_SHARED_OR_UNABLE_SHARE_DATA = 所选数据包含不可分享或已经分享的数据
 API.DOWNLOAD_SUCCESS = 下载成功
 API.DOWNLOAD_FAIL = 下载失败
+API.TIPS.UNREACHABLE = ❌ 无法连通 ❌，你确定要保存吗❓⚠️
+API.TIPS.REACHABLE = ✅ 可以连通 ✅，请点击确定保存 ✔️😊
 
 # 页面
 # /page/login
@@ -228,3 +230,5 @@ PAGE.SHOW = 综艺
 PAGE.OTHER = 其他
 
 PAGE.WARN.EDIT_MARKET_RULE = 从市场下载的规则在原作者编辑后会被更新，你确定要编辑吗？
+
+PAGE.TIPS.EDIT_PROXY_PATH_WARNING = ⚠ 请勿修改代理路径，除非你知道你在做什么
