update version to v2.6.0

--- a/src/main/resources/i18n/messages_en_US.properties
+++ b/src/main/resources/i18n/messages_en_US.properties
@@ -10,6 +10,7 @@ API.SYNC = Sync
 API.TEST_EXAMPLE = Test Example
 API.JACKETT = Jackett
 API.PROWLARR = Prowlarr
+API.QBITTORRENT = qBittorrent
 API.MARKET = Market
 API.MODIFY_SUCCESS = Modify Success
 API.MODIFY_FAIL = Modify Fail
@@ -189,6 +190,7 @@ PAGE.SELECT_OR_SEARCH = Select Or Search
 # /page/home
 PAGE.HOME.TITLE = Home
 PAGE.SYSTEM_NOTICE = System Notice
+PAGE.SYSTEM_NOTICE.CONTENT = Sonarr setting has changed, please click view for detail
 PAGE.VIEW = View
 PAGE.CLOSE = Close
 PAGE.VERSION = Version
@@ -231,4 +233,4 @@ PAGE.OTHER = Other
 
 PAGE.WARN.EDIT_MARKET_RULE = rule from market will be updated after author edit, are you sure ?
 
-PAGE.TIPS.EDIT_PROXY_PATH_WARNING = ⚠ Please don't edit proxy path, unless you know what you want
+PAGE.TIPS.EDIT_PROXY_PATH_WARNING = ⚠ Click here, see how to set up Sonarr
