--- a/src/main/resources/i18n/messages_zh_CN.properties
+++ b/src/main/resources/i18n/messages_zh_CN.properties
@@ -10,6 +10,7 @@ API.SYNC = 同步
 API.TEST_EXAMPLE = 测试用例
 API.JACKETT = Jackett
 API.PROWLARR = Prowlarr
+API.QBITTORRENT = qBittorrent
 API.MARKET = 市场
 API.MODIFY_SUCCESS = 修改成功
 API.MODIFY_FAIL = 修改失败
@@ -189,6 +190,7 @@ PAGE.SELECT_OR_SEARCH = 选择或查询
 # /page/home
 PAGE.HOME.TITLE = 首页
 PAGE.SYSTEM_NOTICE = 系统公告
+PAGE.SYSTEM_NOTICE.CONTENT = Sonarr 配置有变动，请点击查看获取详情
 PAGE.VIEW = 查看
 PAGE.CLOSE = 关闭
 PAGE.VERSION = 版本信息
@@ -231,4 +233,4 @@ PAGE.OTHER = 其他
 
 PAGE.WARN.EDIT_MARKET_RULE = 从市场下载的规则在原作者编辑后会被更新，你确定要编辑吗？
 
-PAGE.TIPS.EDIT_PROXY_PATH_WARNING = ⚠ 请勿修改代理路径，除非你知道你在做什么
+PAGE.TIPS.EDIT_PROXY_PATH_WARNING = ⚠ 点击这里，查看如何配置 Sonarr
