update version to v2.6.4

--- a/src/main/resources/i18n/messages_en_US.properties
+++ b/src/main/resources/i18n/messages_en_US.properties
@@ -66,6 +66,7 @@ PAGE.NO_DATA = Empty
 PAGE.REFRESH_SUCCESS = Refresh Success
 
 # /change-password
+PAGE.PLEASE_INPUT_USERNAME = please input username
 PAGE.CHANGE_PASSWORD.TITLE = Change Password
 PAGE.OLD_PASSWORD = Old Password
 PAGE.OLD_PASSWORD_CAN_NOT_BE_NULL = old password can not be null
