--- a/src/main/resources/i18n/messages_zh_CN.properties
+++ b/src/main/resources/i18n/messages_zh_CN.properties
@@ -66,6 +66,7 @@ PAGE.NO_DATA = 无数据
 PAGE.REFRESH_SUCCESS = 刷新成功
 
 # /page/change-password
+PAGE.PLEASE_INPUT_USERNAME = 请输入用户名
 PAGE.CHANGE_PASSWORD.TITLE = 修改密码
 PAGE.OLD_PASSWORD = 旧密码
 PAGE.OLD_PASSWORD_CAN_NOT_BE_NULL = 旧密码不能为空
