--- a/.github/ISSUE_TEMPLATE/项目问题反馈.md
+++ b/.github/ISSUE_TEMPLATE/项目问题反馈.md
@@ -1,6 +1,6 @@
 ---
-name: 问题反馈
-about: 项目相关的BUG反馈
+name: 项目问题反馈
+about: 反馈项目相关的问题
 title: ''
 labels: bug
 assignees: ''
@@ -11,9 +11,9 @@ assignees: ''
 
 docker
 
-**简要描述遇到的问题**
+**问题描述**
 
-复现问题的操作，出现了什么问题
+简要描述复现问题的操作，以及出现的具体问题
 
 **相关日志**
 
